--- a/css/style.css
+++ b/css/style.css
@@ -299,13 +299,12 @@ img{
     padding: 50px 100px;
     display: flex;
     justify-content: center;
-    align-items: center;
     flex-direction: column;
-    background: url(./images/107743.jpg);
+    align-items: center;
+    background: url(../image/background.jpg);
     background-size: cover;
 }
 .contact .content{
-    max-width: 800px;
     text-align: center;
 }
 .contact .content h2{
@@ -317,35 +316,35 @@ img{
     font-weight: 300;
     color: #fff;
 }
-.main{
+.cont{
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 30px;
 }
-.main .contactinfo{
+.cont .contactinfo{
     width: 50%;
     display: flex;
     flex-direction: column;
 }
-.main .contactinfo .box{
+.cont .contactinfo .box{
     position: relative;
     padding: 20px 0;
     display: flex;
 }
-.main .contactinfo .box .icon{
-    min-height: 60px;
-    height: 60px;
+.cont .contactinfo .box .icon{
+    min-height: 40px;
+    height: 40px;
     background: #fff;
     display: flex;
     justify-content: center;
     text-align: center;
     border-radius: 50%;
-    font-size: 40px;
-    padding: 10px;
+    font-size: 30px;
+    padding: 6px;
 }
-.main .contactinfo .box .text{
+.cont .contactinfo .box .text-1{
     display: flex;
     margin-left: 20px;
     font-size: 16px;
@@ -353,7 +352,7 @@ img{
     flex-direction: column;
     font-weight: 300;
 }
-.main .contactinfo .box .text h3{
+.cont .contactinfo .box .text-1 h3{
     font-weight: 500;
     color: #00bcd4;
 }
@@ -414,10 +413,10 @@ img{
     .contact{
         padding: 50px;
     }
-    .main{
+    .container{
         flex-direction: column;
     }
-    .main .contactinfo, .contactform{
+    .container .contactinfo, .contactform{
         margin-bottom: 40px;
         width: 100%;
     }
