--- a/css/style.css
+++ b/css/style.css
@@ -273,21 +273,21 @@ img{
    height: 90.5vh;
    padding: 50px;
    text-align: center;
-   background-image: url(../image/background.jpg);
+   background-image: url(../image/Backpack.jpg);
    background-size: cover;
    background-color: #313840;
-   color: rgb(19, 12, 12);
+   color: black;
 }
 
 .about-section h1{
-    font-size: 35px;
+    font-size: 45px;
     font-weight: 500px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     padding: 50px;
 }
 
 .about-section p{
-    font-size: 25px;
+    font-size: 35px;
     font-weight: 200px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     padding: 10px;
@@ -305,7 +305,7 @@ img{
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    background: url(../image/background.jpg);
+    background: url(../image/pngtree-school-bag-blue-glasses-cup-image_8199.jpg);
     background-size: cover;
 }
 .contact .content{
@@ -432,14 +432,14 @@ img{
 /* login styling start */
 
 input[type=text], input[type=password] {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-}
-
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+  } 
+  
 button {
   background-color: #e91e63;
   color: white;
@@ -451,7 +451,7 @@ button {
 }
 
 button:hover {
-  opacity: 0.8;
+  opacity: 0.1;
 }
 
 .cancelbtn {
@@ -469,10 +469,6 @@ button:hover {
 img.avatar {
   width: 40%;
   border-radius: 50%;
-}
-
-.container-21 {
-  padding: 16px;
 }
 
 span.psw {
@@ -496,7 +492,7 @@ span.psw {
 
 .modal-content {
   background-color: #fefefe;
-  margin: 1% auto 1% auto; 
+  margin: 0% auto 5% auto; 
   border: 1px solid #888;
   width: 50%; 
 }
@@ -543,3 +539,55 @@ span.psw {
 }
 
 /* login styling end */
+
+
+/* Set a style for all buttons */
+button {
+    background-color: #cc0066;
+    color: white;
+    padding: 10px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: auto;
+    opacity: 0.9;
+  }
+  
+  button:hover {
+    opacity:1;
+  }
+
+/* Extra styles for the cancel button */
+
+/* Float cancel and signup buttons and add an equal width */
+.signupbtn {
+    background-color: #e91e63;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: auto;
+}
+
+
+/* Add padding to container elements */
+.container-2{
+  padding: 16px;
+}
+
+hr {
+  border: 1px solid #f1f1f1;
+  margin-bottom: 25px;
+}
+.animate {
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s;
+  }
+  
+/* Change styles for cancel button and signup button on extra small screens */
+@media screen and (max-width: 300px) {
+  .cancelbtn, .signupbtn {
+    width: 100%;
+  }
+}
