--- a/css/style.css
+++ b/css/style.css
@@ -305,7 +305,7 @@ img{
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    background: url(../image/pngtree-school-bag-blue-glasses-cup-image_8199.jpg);
+    background: url(../image/back-1.jpg);
     background-size: cover;
 }
 .contact .content{
@@ -428,166 +428,145 @@ img{
 }
 
 
-
-/* login styling start */
-
-input[type=text], input[type=password] {
+.main1{
     width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
+    /* margin-left: 100px;
+    padding: 0; */
+}
+.sell{
+    width: 100%;
+    margin: 30px;
+}
+.box1{
+    border: 2px solid grey;
+    height: 280px;
+    position: relative;
+    overflow: hidden;
+    float: left;
+    margin: 10px;
+}
+.box1 img{
+    width: 100%;
+    height: 100%;
+}
+.content1{
+    background: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    position: absolute;
+    top: -100%;
+    left: 0;
+    width: auto;
+    height: 100%;
+    padding: 5px;
     box-sizing: border-box;
-  } 
-  
-button {
-  background-color: #e91e63;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: auto;
+    transition: all 0.7s;
+    overflow: hidden;
 }
-
-button:hover {
-  opacity: 0.1;
+.box1:hover .content1{
+    top: 0;
 }
-
-.cancelbtn {
-  width: auto;
-  padding: 10px 18px;
-  background-color: #f44336;
+.content1 h3{
+    font-size: 18px;
+    text-align: center;
+    border-bottom: 1px solid #ff66b3;
+    text-transform: uppercase;
+    padding: 0px;
 }
-
-.imgcontainer {
-  text-align: center;
-  margin: 24px 0 12px 0;
-  position: relative;
-}
-
-img.avatar {
-  width: 40%;
-  border-radius: 50%;
-}
-
-span.psw {
-  float: right;
-  padding-top: 16px;
-}
-
-.modal {
-  display: none; 
-  position: fixed; 
-  z-index: 1; 
-  left: 0;
-  top: 0;
-  width: 100%; 
-  height: 100%; 
-  overflow: auto; 
-  background-color: rgb(0,0,0); 
-  background-color: rgba(0,0,0,0.4); 
-  padding-top: 30px;
-}
-
-.modal-content {
-  background-color: #fefefe;
-  margin: 0% auto 5% auto; 
-  border: 1px solid #888;
-  width: 50%; 
-}
+.content1 p {
+    letter-spacing: 0;
+    font-size: 15px;
+    border-bottom: 1px solid #ff66b3;
+} 
 
 
-.close {
-  position: absolute;
-  right: 25px;
-  top: 0;
-  color: #000;
-  font-size: 35px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: red;
-  cursor: pointer;
-}
-
-.animate {
-  -webkit-animation: animatezoom 0.6s;
-  animation: animatezoom 0.6s
-}
-
-@-webkit-keyframes animatezoom {
-  from {-webkit-transform: scale(0)} 
-  to {-webkit-transform: scale(1)}
-}
-  
-@keyframes animatezoom {
-  from {transform: scale(0)} 
-  to {transform: scale(1)}
-}
-
-@media screen and (max-width: 300px) {
-  span.psw {
-     display: block;
-     float: none;
-  }
-  .cancelbtn {
-     width: 100%;
-  }
-}
-
-/* login styling end */
 
 
-/* Set a style for all buttons */
-button {
-    background-color: #cc0066;
-    color: white;
-    padding: 10px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: auto;
-    opacity: 0.9;
-  }
-  
-  button:hover {
-    opacity:1;
-  }
-
-/* Extra styles for the cancel button */
-
-/* Float cancel and signup buttons and add an equal width */
-.signupbtn {
-    background-color: #e91e63;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: auto;
-}
 
 
-/* Add padding to container elements */
-.container-2{
-  padding: 16px;
-}
 
-hr {
-  border: 1px solid #f1f1f1;
-  margin-bottom: 25px;
-}
-.animate {
-    -webkit-animation: animatezoom 0.6s;
-    animation: animatezoom 0.6s;
-  }
-  
-/* Change styles for cancel button and signup button on extra small screens */
-@media screen and (max-width: 300px) {
-  .cancelbtn, .signupbtn {
+
+
+
+
+
+
+
+
+/* HighLight Part Styling Start */
+
+.mySlides img {
+    vertical-align: middle;
     width: 100%;
   }
-}
+  
+  .show {
+    position: relative;
+    width: 40%;
+    height: 50%;
+    margin: 0px;
+  
+  }
+  
+  .mySlides {
+    display: none;
+  }
+  
+  .cursor {
+    cursor: pointer;
+  }
+  
+  .prev,
+  .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -50px;
+    color: #99004d;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    -webkit-user-select: none;
+  }
+  
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  .prev:hover,
+  .next:hover {
+    background-color: #cc0066;
+  }
+  
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+   
+  .box2{
+      width: 100%;
+  }
+  .info{
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
+      margin: 50px;
+  }
+  .info h1{
+      font-size: 45px;
+      font-weight: 400;
+  }
+  .info p{
+      font-size: 20px;
+      margin-top: 30px;
+  }
+  .info h3{
+      font-size: 25px;
+      color: pink;
+  }
+
+/* HighLight Part Styling End */
