--- a/css/style.css
+++ b/css/style.css
@@ -493,7 +493,7 @@ img{
 }
 @media(max-width:520px){
     #menu li a{
-        margin-right: 5r0px;
+        margin-right: 50px;
     }
 }
 @media (max-width: 360px){
