--- a/css/style.css
+++ b/css/style.css
@@ -689,7 +689,7 @@ img{
   
     header .navigation a:hover{
       background: #fff;
-      color: #000;
+      color: #fff;
       transition: 0.2s ease;
     }
   
@@ -708,11 +708,11 @@ img{
   
     .menu-btn.active{
       z-index: 999;
-      background: url(/image/close.png)no-repeat;
-      background-size: 25px;
+      background: url(/image/PngItem_4856652.png)no-repeat;
+      background-size: 20px;
       background-position: center;
       transition: 0.3s ease;
-      filter: invert(1);
+      filter: invert(-1);
     }
 }
 
