--- a/css/style.css
+++ b/css/style.css
@@ -520,11 +520,6 @@ img{
         height: 300px;
         width: 30%;
     }
-    .sell{
-        width: 100%;
-        margin-left: -0px;
-        padding: 10px;
-    }
 }
 
 @media (max-width: 768px){
@@ -562,11 +557,6 @@ img{
         width: 40%;
         justify-content: center;
     }
-    .sell{
-        width: 100%;
-        margin-left: 27px;
-        padding: 10px;
-    }
 }
 
 
@@ -595,7 +585,7 @@ img{
     }
     .box1{
         height: 450px;
-        width: 80%;
+        width: auto;
     }
     .content1 h3{
         font-size: 16px;
@@ -610,7 +600,12 @@ img{
     }
     .box1{
         height: 300px;
-        width: 45%;
+        width: 80%;
+    }
+    .sell{
+        width: 100%;
+        margin-left: 30px;
+        padding: 10px;
     }
 }
 
@@ -637,6 +632,11 @@ img{
     }
     .container-123{
         height: 400px;
+    }
+    .sell{
+        width: 100%;
+        margin-left: -10px;
+        padding: 10px;
     }
 }
 
