--- a/css/style.css
+++ b/css/style.css
@@ -520,6 +520,11 @@ img{
         height: 300px;
         width: 30%;
     }
+    .sell{
+        width: 100%;
+        margin-left: 3px;
+        padding: 1px;
+    }
 }
 
 @media (max-width: 768px){
@@ -531,14 +536,8 @@ img{
         text-align: center;
         margin: 10px 0;
     }
-    #menu{
-        text-align: center;
-    }
     .banner-title{
         padding-top: 0;
-    }
-    .banner-title h1{
-        font-size: 1.7rem;
     }
     .footer-widget{
         margin-bottom: 20px;
@@ -554,8 +553,13 @@ img{
     }
     .box1{
         height: 250px;
-        width: 40%;
+        width: 45%;
         justify-content: center;
+    }
+    .sell{
+        width: 100%;
+        margin-left: 2px;
+        padding: 10px;
     }
 }
 
@@ -565,11 +569,6 @@ img{
         width: 100%;
         margin-left: -10px;
         padding: 10px;
-    }
-    #menu li a{
-        display: inline-block;
-        text-align: center;
-        margin-left: 7px;
     }
     .box1{
         height: 300px;
@@ -599,12 +598,12 @@ img{
         padding: 75px 25px 0 60px;
     }
     .box1{
-        height: 400px;
+        height: 450px;
         width: 80%;
     }
     .sell{
         width: 100%;
-        margin-left: 30px;
+        margin-left: 25px;
         padding: 10px;
     }
 }
